// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default 1`] = `
<div
  className="delete-confirm"
>
  <div
    className="title"
  >
    2 files will be deleted
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-primary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
    <span
      className="separator"
    />
    <button
      className="btn btn-outline-info btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`2- deleting 1`] = `
<div
  className="delete-progress"
>
  <div
    className="description"
  >
    1
     / 
    2
  </div>
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={2}
        aria-valuemin={0}
        aria-valuenow={1}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "50%",
          }
        }
      />
    </div>
  </div>
  <div
    className="queue-log"
  >
    <div
      className="list-item list-item-info"
    >
      Deleting...
    </div>
    <div
      className="list-item list-item-success"
    >
      /foo.png deleted
    </div>
  </div>
</div>
`;

exports[`2- done 1`] = `
<div
  className="delete-progress"
>
  <div
    className="description"
  >
    2
     / 
    2
  </div>
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={2}
        aria-valuemin={0}
        aria-valuenow={2}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    className="queue-log"
  >
    <div
      className="list-item list-item-info"
    >
      Deleting...
    </div>
    <div
      className="list-item list-item-success"
    >
      /foo.png deleted
    </div>
  </div>
</div>
`;

exports[`3- failed 1`] = `
<div
  className="delete-progress"
>
  <div
    className="description"
  >
    2
     / 
    2
  </div>
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={2}
        aria-valuemin={0}
        aria-valuenow={2}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    className="queue-log"
  >
    <div
      className="list-item list-item-info"
    >
      Deleting...
    </div>
    <div
      className="list-item list-item-success"
    >
      /foo.png deleted
    </div>
  </div>
  <div
    className="controls"
  >
    <button
      className="btn btn-outline-info btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;
